--- a/webthuongmaidientu/src/app/Frontend/home/home.component.html
+++ b/webthuongmaidientu/src/app/Frontend/home/home.component.html
@@ -2,17 +2,14 @@
 
 <h1> Danh sách sản phẩm</h1>
 
-<div class="container-fluid text-center">
+<div class="container text-center">
     <div class="row">
         <div class="col-3" *ngFor="let a of Products">
-            <div class="card">
-                <img src={{a.img}} class="card-img-top" alt="" style="width: 400px; height: 400px;">
+            <div class="box">
+                <img src={{a.img}} class="card-img-top" alt="" style="width: 300px; height: 300px;">
                 <div class="card-body">
                     <h5 class="card-text text-uppercase">{{a.name}} </h5>
                     <h5 class="card-text text-danger">Giá: {{a.price}} VNĐ</h5>
-                    <div class="d-grid gap-2">
-                        <a href="#" class="btn btn-outline-success">Xem chi tiết</a>
-                    </div>
                 </div>
             </div>
         </div>
