--- a/webthuongmaidientu/src/app/Frontend/Section/header/header.component.html
+++ b/webthuongmaidientu/src/app/Frontend/Section/header/header.component.html
@@ -8,10 +8,10 @@
 
         <ul class="header_menu" style="font-size: 16px;">
             <li class="header_menu_item"><a routerLink="/home">Home</a></li>
-            <li class="header_menu_item"><a routerLink="/home">Áo thun</a></li>
-            <li class="header_menu_item"><a routerLink="/home">Quần</a></li>
-            <li class="header_menu_item"><a routerLink="/home">Áo khoác</a></li>
-            <li class="header_menu_item"><a routerLink="/home">Phụ kiện</a></li>
+            <li class="header_menu_item"><a routerLink="/category/1">Áo thun</a></li>
+            <li class="header_menu_item"><a routerLink="/category/2">Quần</a></li>
+            <li class="header_menu_item"><a routerLink="/category/3">Áo khoác</a></li>
+            <li class="header_menu_item"><a routerLink="/category/4">Phụ kiện</a></li>
             <li class="header_menu_item"><a routerLink="/home">Contact</a></li>
         </ul>
 
