--- a/webthuongmaidientu/src/app/Frontend/categoryproduct/categoryproduct.component.html
+++ b/webthuongmaidientu/src/app/Frontend/categoryproduct/categoryproduct.component.html
@@ -1,9 +1,7 @@
-<app-headercarousel></app-headercarousel>
-
-<div class="container text-center">
+<div class="container text-center mt-5">
     <div class="row">
-        <div class="col-3" *ngFor="let a of Products | paginate: { itemsPerPage: 6, currentPage: page }">
-            <div class="box" [routerLink]="['/product/', a.sanPhamId]">
+        <div class="col-3" *ngFor="let a of listProductCategory">
+            <div class="box">
                 <img src="{{ a.mainImg }}" class="card-img-top" alt="" style="width: 300px; height: 300px" />
                 <div class="card-body">
                     <h5 class="card-text text-uppercase">{{ a.sanPhamId }}</h5>
@@ -11,9 +9,6 @@
                     <h5 class="card-text text-danger">Giá: {{ a.stringPrice }} VNĐ</h5>
                 </div>
             </div>
-        </div>
-        <div class="mt-5">
-            <pagination-controls (pageChange)="page = $event"></pagination-controls>
         </div>
     </div>
 </div>
