--- a/webthuongmaidientu/src/app/Frontend/Section/header/header.component.html
+++ b/webthuongmaidientu/src/app/Frontend/Section/header/header.component.html
@@ -18,9 +18,9 @@
         <ul class="header_icon">
             <li class="header_icon_item"><a href=""><i class="fas fa-search"></i></a></li>
             <li class="header_icon_item">
-                <a href="/User/Cart">
+                <a routerLink="/cart">
                     <i class="fas fa-shopping-cart"></i>
-                    <span class="numOfCart">0</span>
+                    <!-- <span class="numOfCart"> {{cartLength}} </span> -->
 
                 </a>
             </li>
@@ -28,9 +28,6 @@
             <li class="header_icon_item ">
                 <a routerLink="login"><i class="fas fa-user"></i></a>
             </li>
-
-
-
         </ul>
     </nav>
 </div>
