--- a/webthuongmaidientu/src/app/Frontend/categoryproduct/categoryproduct.component.html
+++ b/webthuongmaidientu/src/app/Frontend/categoryproduct/categoryproduct.component.html
@@ -1,7 +1,7 @@
 <div class="container text-center mt-5">
     <div class="row">
         <div class="col-3" *ngFor="let a of listProductCategory">
-            <div class="box">
+            <div class="box" [routerLink]="['/product/', a.sanPhamId]">
                 <img src="{{ a.mainImg }}" class="card-img-top" alt="" style="width: 300px; height: 300px" />
                 <div class="card-body">
                     <h5 class="card-text text-uppercase">{{ a.sanPhamId }}</h5>
