--- a/webthuongmaidientu/src/app/Frontend/cart/cart.component.css
+++ b/webthuongmaidientu/src/app/Frontend/cart/cart.component.css
@@ -7,5 +7,6 @@
     border: 1px solid #1a2b5f;
 }
 body{
+    width: 100%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
