--- a/webthuongmaidientu/src/app/Frontend/Section/headercarousel/headercarousel.component.html
+++ b/webthuongmaidientu/src/app/Frontend/Section/headercarousel/headercarousel.component.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col-lg-3 ">
                 <div class="main_product_item">
-                    <img src="../assets/img/newcls.jpg" alt="">
+                    <img src="./assets/img/newcls.jpg" alt="">
                     <div class="info">
                         <div>New collection</div>
                         <a class="btnShopNow" href="">Shop Now</a>
@@ -21,7 +21,7 @@
             </div>
             <div class="col-lg-3">
                 <div class="main_product_item">
-                    <img src="../assets/img/men.jpg" alt="">
+                    <img src="./assets/img/men.jpg" alt="">
                     <div class="info">
                         <div>Men's Fashion</div>
                         <a class="btnShopNow" href="">Shop Now</a>
@@ -31,7 +31,7 @@
             </div>
             <div class="col-lg-3">
                 <div class="main_product_item">
-                    <img src="../assets/img/wm.png" alt="">
+                    <img src="./assets/img/wm.png" alt="">
                     <div class="info">
                         <div>Women's Fashion</div>
                         <a class="" href="">Shop Now</a>
@@ -41,7 +41,7 @@
             </div>
             <div class="col-lg-3">
                 <div class="main_product_item">
-                    <img src="../assets/img/acs.jpg" alt="">
+                    <img src="./assets/img/acs.jpg" alt="">
                     <div class="info">
                         <div>Accessores</div>
                         <a class="btnShopNow" href="">Shop Now</a>
