--- a/webthuongmaidientu/src/app/Frontend/payment/payment.component.html
+++ b/webthuongmaidientu/src/app/Frontend/payment/payment.component.html
@@ -1,4 +1,4 @@
-<div class="container card mt-3">
+<div class="container card mt-3" id="payment">
     <main class="">
         <div class="py-5 text-center">
             <img class="d-block mx-auto mb-4" src="./assets/img/logo.png" alt="">
@@ -33,14 +33,14 @@
                     <div class="row g-3">
                         <div class="col-sm-12">
                             <label for="name" class="form-label">Full name</label>
-                            <input type="text" class="form-control" id="name">
+                            <input type="text" class="form-control" id="name" placeholder="FullName">
                         </div>
 
 
                         <div class="col-12">
-                            <label for="username" class="form-label">Username</label>
+                            <label for="email" class="form-label">Email</label>
                             <div class="input-group">
-                                <input type="text" class="form-control" id="username" placeholder="Username">
+                                <input type="email" class="form-control" id="email" placeholder="Email">
                             </div>
                         </div>
 
