--- a/webthuongmaidientu/src/app/Frontend/productdetail/productdetail.component.html
+++ b/webthuongmaidientu/src/app/Frontend/productdetail/productdetail.component.html
@@ -30,7 +30,7 @@
 
                         </div>
                         <form>
-                            <div class="row mb-3">
+                            <!-- <div class="row mb-3">
                                 <span class="col-3" style="font-size: 1.5rem;">Kích thước</span>
                                 <div class="col-6">
                                     <select class="form-select" style="width: 110px;border: 1px solid #000;">
@@ -42,7 +42,7 @@
                                         <option value="XXL">XXL</option>
                                     </select>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="row">
                                 <div class="col-8">
                                     <span style="font-size:1.5rem;">Số lượng</span>
@@ -60,7 +60,7 @@
                                 <button class="btn btn-outline-dark btn-lg" (click)="onClick()">THÊM VÀO GIỎ</button>
                             </div>
                             <div class="d-grid gap-2">
-                                <button class="btn btn-dark btn-lg" (click)="onClick()">MUA NGAY</button>
+                                <button class="btn btn-dark btn-lg" (click)="buyNow()">MUA NGAY</button>
                             </div>
                         </form>
                         <div style="font-size:1.5rem;" class="mt-3">
